Fix mobile navbar; Remove borders from home page search bar on smaller screens

--- a/app/assets/stylesheets/wsu/_home.scss
+++ b/app/assets/stylesheets/wsu/_home.scss
@@ -87,6 +87,7 @@ $border-thickness: 3px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
+    border: 0;
 
     .input-group {
       display: flex;
@@ -164,5 +165,11 @@ $border-thickness: 3px;
 
   .spotlight-flexbox .box .caption {
     font-style: normal;
+  }
+
+  .navbar-top {
+    @media (min-width: $screen-sm-min) {
+      display: none;
+    }
   }
 }
