--- a/app/assets/stylesheets/wsu/_navbar.scss
+++ b/app/assets/stylesheets/wsu/_navbar.scss
@@ -8,6 +8,17 @@
 }
 
 #header-navbar {
+  display: flex;
+  flex-direction: column;
+
+  & > * {
+    width: 100%;
+  }
+
+  @media (max-width: $screen-xs-max) {
+    flex-direction: column-reverse;
+  }
+
   .navbar-nav {
     @media (min-width: $grid-float-breakpoint) {
       > li {
@@ -27,4 +38,8 @@
       }
     }
   }
+}
+
+.navbar-toggle {
+  margin-top: 23px;
 }
